<resources>
    <string name="app_name">Joker</string>

    <string name="dummy_text">dummy</string>
    <string name="dummy_text_long">When Chuck Norris is wrong,he is right,even when he turns left. When Chuck Norris is wrong,he is right,even when he turns left. When Chuck Norris is wrong,he is right,even when he turns left.</string>
    <string name="notification">Notification</string>
    <string name="more">More</string>
    <string name="created_at">Created At:</string>
    <string name="updated_at">Updated At:</string>
    <string name="url">URL:</string>
    <string name="categories">Categories:</string>
    <string name="search_jokes">Search Jokes</string>
    <string name="value">Value</string>
    <string name="id">id</string>
    <string name="id_joke">ID:</string>
    <string name="loading">Loading</string>
    <string name="favourites">Favourites</string>

</resources>
